# gsoc2-cli

./: .craft.yml  .gitignore  .gitpod.yml  .gsoc2clirc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-entrypoint.sh  package-lock.json  package.json  setup.cfg  setup.py  setupTests.js
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  QUESTION.md
.github/workflows/: build.yml  ci.yml  release.yml
js/: helper.js  index.d.ts  index.js  logger.js
js/__mocks__/: gsoc2-cli
js/__tests__/: helper.test.js
js/releases/: index.js
js/releases/__tests__/: index.test.js
npm-binary-distributions/darwin/: README.md  package.json
npm-binary-distributions/linux-arm/: README.md  package.json
npm-binary-distributions/linux-arm64/: README.md  package.json
npm-binary-distributions/linux-i686/: README.md  package.json
npm-binary-distributions/linux-x64/: README.md  package.json
npm-binary-distributions/win32-i686/: README.md  package.json
npm-binary-distributions/win32-x64/: README.md  package.json
scripts/: build-in-docker.sh  bump-version.sh  install.js  test-vercel-nft.js  wheels
src/: api.rs  bashsupport.sh  config.rs  constants.rs  main.rs
src/commands/: bash_hook.rs  info.rs  login.rs  mod.rs  send_envelope.rs  send_event.rs  uninstall.rs  update.rs  upload_proguard.rs
src/commands/debug_files/: bundle_jvm.rs  (+1 more)
src/utils/: android.rs  dif_upload.rs  event.rs  file_upload.rs  http.rs  logging.rs  progress.rs  releases.rs  sourcemaps.rs  system.rs  update.rs  vcs.rs  xcode.rs
tests/integration/: info.rs  mod.rs
(+241 files in other folders)
