[metadata]
name = gsoc2_cli
description = A command line utility to work with Gsoc2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gsoc2/gsoc2-cli
author = Gsoc2
author_email = oss@gsoc2.io
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages =
py_modules =
python_requires = >=3.7
